Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -139,6 +139,33 @@
     ]
   },
   {
+    "title": "Đồng Nai khảo sát xây cầu, làm đường xuyên rừng kết nối Bình Phước",
+    "content": "Chính quyền Đồng Nai đã thực hiện khảo sát xây cầu Mã Đà và làm đường kết nối với Bình Phước sau nhiều lần từ chối dự án do lo ngại ảnh hưởng đến khu sinh quyển thế giới. Đoàn khảo sát đánh giá vị trí cầu và các đoạn đường đề xuất nâng cấp, với tổng mức đầu tư khoảng 5.130 tỷ đồng. Dự án này nhằm rút ngắn thời gian giao thương giữa hai tỉnh và kết nối với sân bay Long Thành và cảng Cái Mép - Thị Vải.",
+    "link": "https://vnexpress.net/dong-nai-khao-sat-xay-cau-lam-duong-xuyen-rung-ket-noi-binh-phuoc-4860840.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Đồng Nai khảo sát xây cầu Mã Đà?",
+    "answers": [
+      {
+        "text": "Để kết nối Bình Phước và giảm thời gian giao thương.",
+        "correct": true
+      },
+      {
+        "text": "Để mở rộng khu bảo tồn thiên nhiên.",
+        "correct": false
+      },
+      {
+        "text": "Để xây dựng một khu du lịch mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng cường an ninh vùng biên giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chiến dịch \"độn thổ\" bí mật của Nga khiến Ukraine không kịp trở tay ở Kursk",
     "content": "Trong một chiến dịch bí mật mang tên \"Chiến dịch Đường ống\", quân đội Nga đã tiến hành một cuộc tấn công đột kích vào các vị trí của Ukraine ở tỉnh Kursk, cắt đứt các tuyến tiếp tế của đối phương và khiến lực lượng Ukraine rơi vào tình trạng hỗn loạn. Tổng thống Vladimir Putin đã khen ngợi sự táo bạo và hiệu quả của các binh sĩ Nga trong chiến dịch này, trong đó họ đã sử dụng đường ống dẫn khí để xâm nhập vào khu vực đối phương. Chiến dịch này diễn ra sau nhiều tháng chuẩn bị và đã giúp Nga giành lại được nhiều khu vực quan trọng ở Kursk.",
     "link": "https://dantri.com.vn/the-gioi/chien-dich-don-tho-bi-mat-cua-nga-khien-ukraine-khong-kip-tro-tay-o-kursk-20250313121703079.htm",
@@ -1387,33 +1414,6 @@
     ]
   },
   {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -1440,6 +1440,33 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -1893,33 +1920,6 @@
     ]
   },
   {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -1946,6 +1946,33 @@
       },
       {
         "text": "92 tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -3330,32 +3357,28 @@
     ]
   },
   {
-    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
-    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
-    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
-    "cat": "kinh-doanh",
+    "title": "Rau củ quả nào tốt cho não?",
+    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
+    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
+    "cat": "suc-khoe",
     "positivity": 8,
-    "importance": 9,
-    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
+    "importance": 7,
+    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
     "answers": [
       {
-        "text": "Hơn 12.500 ôtô điện",
+        "text": "Có, rau củ quả rất tốt cho não trẻ.",
         "correct": true
       },
       {
-        "text": "10.000 ôtô điện",
+        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
         "correct": false
       },
       {
-        "text": "15.000 ôtô điện",
+        "text": "Rau củ quả không có tác dụng gì.",
         "correct": false
       },
       {
-        "text": "8.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "12.000 ôtô điện",
+        "text": "Chỉ một số loại rau củ mới tốt cho não.",
         "correct": false
       }
     ]
@@ -3388,28 +3411,32 @@
     ]
   },
   {
-    "title": "Rau củ quả nào tốt cho não?",
-    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
-    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
-    "cat": "suc-khoe",
+    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
+    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
+    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
+    "cat": "kinh-doanh",
     "positivity": 8,
-    "importance": 7,
-    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
+    "importance": 9,
+    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
     "answers": [
       {
-        "text": "Có, rau củ quả rất tốt cho não trẻ.",
+        "text": "Hơn 12.500 ôtô điện",
         "correct": true
       },
       {
-        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
+        "text": "10.000 ôtô điện",
         "correct": false
       },
       {
-        "text": "Rau củ quả không có tác dụng gì.",
+        "text": "15.000 ôtô điện",
         "correct": false
       },
       {
-        "text": "Chỉ một số loại rau củ mới tốt cho não.",
+        "text": "8.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "12.000 ôtô điện",
         "correct": false
       }
     ]
@@ -4253,33 +4280,6 @@
       },
       {
         "text": "Không có biện pháp cụ thể nào.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cuộc sống bế tắc của bạn gái tin đồn Kim Soo Hyun trước khi mất ở tuổi 25",
-    "content": "Kim Sae Ron, nữ diễn viên tài năng Hàn Quốc, đã gặp nhiều khó khăn trong cuộc sống trước khi qua đời ở tuổi 25. Cô phải đối mặt với áp lực nợ nần và các vấn đề về sức khỏe tâm thần, bao gồm cả trầm cảm. Sau bê bối lái xe khi say rượu, sự nghiệp của cô bị ảnh hưởng nặng nề, dẫn đến việc cô bị tẩy chay và không có cơ hội trở lại với diễn xuất. Kim Sae Ron đã từng cầu cứu Kim Soo Hyun để giúp giải quyết khoản nợ lớn trước khi mất.",
-    "link": "https://dantri.com.vn/giai-tri/cuoc-song-be-tac-cua-ban-gai-tin-don-kim-soo-hyun-truoc-khi-mat-o-tuoi-25-20250312123614202.htm",
-    "cat": "giai-tri",
-    "positivity": 1,
-    "importance": 10,
-    "question": "Cuộc sống của Kim Sae Ron gặp khó khăn gì trước khi cô qua đời?",
-    "answers": [
-      {
-        "text": "Cô gặp vấn đề về sức khỏe tâm thần và áp lực nợ nần.",
-        "correct": true
-      },
-      {
-        "text": "Cô có sự nghiệp diễn xuất thành công và được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Cô sống hạnh phúc bên gia đình và bạn bè.",
-        "correct": false
-      },
-      {
-        "text": "Cô không gặp bất kỳ khó khăn nào trong cuộc sống.",
         "correct": false
       }
     ]
