--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,145 @@
     ]
   },
   {
+    "title": "Bộ Y tế thúc Quảng Nam tiêm vaccine sởi cho trẻ",
+    "content": "Bộ Y tế đã yêu cầu tỉnh Quảng Nam nhanh chóng thực hiện tiêm vaccine sởi cho trẻ em, đặc biệt là ở những khu vực có nhiều ca nhiễm. Tính đến đầu tháng 3, Quảng Nam đã ghi nhận hàng trăm ca sởi và có hai trẻ tử vong. Bộ Y tế đề nghị hoàn thành việc tiêm 20.000 liều vaccine đã phân bổ trước ngày 25/3 và khuyến cáo các biện pháp tiêm bổ sung cho trẻ em chưa được tiêm đủ. Sự gia tăng ca bệnh được cho là do khoảng trống miễn dịch, ảnh hưởng bởi dịch Covid-19 và tình trạng thiếu vaccine trong năm 2023.",
+    "link": "https://vnexpress.net/bo-y-te-thuc-quang-nam-tiem-vaccine-soi-cho-tre-4860843.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao Bộ Y tế thúc giục Quảng Nam tiêm vaccine sởi cho trẻ?",
+    "answers": [
+      {
+        "text": "Để khống chế dịch sởi đang bùng phát.",
+        "correct": true
+      },
+      {
+        "text": "Để chuẩn bị cho mùa dịch cúm.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng cường sức khỏe cho trẻ em.",
+        "correct": false
+      },
+      {
+        "text": "Để nâng cao ý thức phòng bệnh của người dân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Món quà Tổng thống Mỹ Donald Trump tặng cháu gái để khích lệ niềm đam mê",
+    "content": "Mới đây, Tổng thống Mỹ Donald Trump đã tiết lộ rằng ông đã tặng cháu gái Kai Trump, một golf thủ trẻ tuổi, chiếc xe Tesla Cybertruck để khích lệ niềm đam mê chơi golf của cô. Ông Trump cho biết món quà này không chỉ giúp Kai thuận tiện di chuyển tới sân golf mà còn thể hiện sự ủng hộ đối với Elon Musk, CEO của Tesla. Kai, 17 tuổi, là cháu gái lớn nhất của ông Trump và đang được nhiều trường đại học chú ý vì tài năng golf của mình.",
+    "link": "https://dantri.com.vn/giao-duc/mon-qua-tong-thong-my-donald-trump-tang-chau-gai-de-khich-le-niem-dam-me-20250312160224987.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tổng thống Donald Trump đã tặng gì cho cháu gái Kai Trump?",
+    "answers": [
+      {
+        "text": "Chiếc xe Tesla Cybertruck",
+        "correct": true
+      },
+      {
+        "text": "Một chiếc xe hơi khác",
+        "correct": false
+      },
+      {
+        "text": "Một bộ gậy golf mới",
+        "correct": false
+      },
+      {
+        "text": "Một chuyến du lịch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
+    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
+    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
+    "answers": [
+      {
+        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Uống thuốc tự điều trị tại nhà.",
+        "correct": false
+      },
+      {
+        "text": "Thực hiện bài tập thể dục hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
+    "answers": [
+      {
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "correct": true
+      },
+      {
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "correct": false
+      },
+      {
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Áp lực học khiến nữ sinh 14 tuổi trầm cảm",
+    "content": "Bài viết đề cập đến trường hợp một nữ sinh 14 tuổi ở Hà Nội, bị trầm cảm do áp lực học tập và kỳ vọng từ gia đình. Cô bé cảm thấy chán nản, lo lắng về thành tích học tập và thường xuyên có ý tưởng tự sát. Các bác sĩ cho biết tình trạng trầm cảm ở lứa tuổi vị thành niên đang gia tăng, đặc biệt là ở những học sinh xuất sắc. Bài viết cũng khuyến cáo gia đình cần quan tâm, lắng nghe và tạo môi trường an toàn cho trẻ để giảm bớt áp lực.",
+    "link": "https://vnexpress.net/ap-luc-hoc-khien-nu-sinh-14-tuoi-tram-cam-4860665.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Tại sao nữ sinh 14 tuổi lại bị trầm cảm?",
+    "answers": [
+      {
+        "text": "Do áp lực học tập và kỳ vọng từ gia đình",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích học hành",
+        "correct": false
+      },
+      {
+        "text": "Vì không có bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Do bị ốm nặng",
+        "correct": false
+      },
+      {
+        "text": "Vì thích chơi game hơn học",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "HLV Bahrain: 'Đấu Indonesia như gặp Hà Lan'",
     "content": "HLV Dragan Talajic của đội tuyển Bahrain đã chỉ trích việc Indonesia ồ ạt nhập tịch cầu thủ gốc Hà Lan trước trận đấu ở vòng loại World Cup 2026. Ông cho rằng đội hình của Indonesia giống như một đội Hà Lan thu nhỏ với nhiều cầu thủ nhập tịch và thể hiện sự tự tin vào khả năng của đội mình. Trận đấu giữa Bahrain và Indonesia sẽ diễn ra vào ngày 25/3, sau khi cả hai đội vừa hòa 2-2 ở lượt đi.",
     "link": "https://vnexpress.net/hlv-bahrain-dau-indonesia-nhu-gap-ha-lan-4860848.html",
@@ -1804,6 +1943,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -1830,33 +1996,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -2283,33 +2422,6 @@
     ]
   },
   {
-    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
-    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
-    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
-    "answers": [
-      {
-        "text": "Người đi xe máy",
-        "correct": true
-      },
-      {
-        "text": "Người lái ôtô",
-        "correct": false
-      },
-      {
-        "text": "Không ai phải bồi thường",
-        "correct": false
-      },
-      {
-        "text": "Cả hai bên đều phải bồi thường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -2363,6 +2475,33 @@
       },
       {
         "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
+    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
+    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
+    "answers": [
+      {
+        "text": "Người đi xe máy",
+        "correct": true
+      },
+      {
+        "text": "Người lái ôtô",
+        "correct": false
+      },
+      {
+        "text": "Không ai phải bồi thường",
+        "correct": false
+      },
+      {
+        "text": "Cả hai bên đều phải bồi thường",
         "correct": false
       }
     ]
@@ -4643,33 +4782,6 @@
       },
       {
         "text": "Tổ chức tour leo núi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chủ tịch Hà Nội: Triển khai theo chỉ đạo của Chính phủ, loại bỏ cán bộ không đủ năng lực",
-    "content": "Chủ tịch UBND TP Hà Nội Trần Sỹ Thanh đã chỉ đạo các đơn vị thực hiện theo chỉ đạo của Chính phủ về việc loại bỏ cán bộ không đủ năng lực. Ông yêu cầu cần cải cách thể chế, cải thiện môi trường đầu tư và thu hút nhân tài, đồng thời nhấn mạnh đến việc xây dựng khung pháp lý riêng cho đặc khu kinh tế. Hà Nội cũng đặt mục tiêu giảm thời gian xử lý thủ tục hành chính và chi phí kinh doanh để thúc đẩy phát triển kinh tế xã hội.",
-    "link": "https://tuoitre.vn/chu-tich-ha-noi-trien-khai-theo-chi-dao-cua-chinh-phu-loai-bo-can-bo-khong-du-nang-luc-20250312134839697.htm",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Chủ tịch Hà Nội đã chỉ đạo gì về cán bộ không đủ năng lực?",
-    "answers": [
-      {
-        "text": "Loại bỏ cán bộ không đủ năng lực.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường tuyển dụng cán bộ mới.",
-        "correct": false
-      },
-      {
-        "text": "Tăng lương cho cán bộ.",
-        "correct": false
-      },
-      {
-        "text": "Không có biện pháp cụ thể nào.",
         "correct": false
       }
     ]
