Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Em bé lao ngang đường vào đầu ôtô",
+    "content": "Vào tối ngày 12/3 tại Hải Phòng, một cậu bé bất ngờ lao qua đường và va chạm với ôtô đang di chuyển. Tình huống xảy ra trong điều kiện trời tối và tầm nhìn hạn chế, nhưng may mắn là tài xế đã kịp thời xử lý. Sau vụ va chạm, em bé đứng khóc giữa đường và không thấy người nhà đến đón. Bài viết nhấn mạnh tầm quan trọng của việc giám sát trẻ em khi chơi gần đường và lái xe cẩn thận trong khu vực nội đô.",
+    "link": "https://vnexpress.net/em-be-lao-ngang-duong-vao-dau-oto-4860695.html",
+    "cat": "oto-xe-may",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao em bé lại lao ra đường vào ô tô?",
+    "answers": [
+      {
+        "text": "Vì không có người lớn giám sát.",
+        "correct": true
+      },
+      {
+        "text": "Để chơi đùa với bạn.",
+        "correct": false
+      },
+      {
+        "text": "Đang chạy theo một con vật.",
+        "correct": false
+      },
+      {
+        "text": "Muốn sang đường mua đồ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những tỉnh có diện tích gần bằng nhau nhưng GRDP 'một trời một vực'",
     "content": "Bài viết phân tích sự chênh lệch về quy mô kinh tế (GRDP) giữa các tỉnh có diện tích tương đương tại Việt Nam. Bắc Ninh, với diện tích nhỏ nhất, lại có GRDP lớn thứ 10 cả nước, vượt qua cả Nghệ An, tỉnh có diện tích lớn nhất. Các tỉnh Đồng bằng sông Hồng như Hải Dương, Vĩnh Phúc cũng có GRDP cao mặc dù diện tích nhỏ. Ngược lại, nhiều tỉnh miền núi có diện tích lớn nhưng GRDP thấp, cho thấy sự không đồng đều trong phát triển kinh tế giữa các địa phương.",
     "link": "https://tuoitre.vn/nhung-tinh-co-dien-tich-gan-bang-nhau-nhung-grdp-mot-troi-mot-vuc-20250313131616904.htm",
@@ -663,6 +690,64 @@
       },
       {
         "text": "Ông không bình luận gì về Indonesia.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ukraine cạn kiệt vũ khí thay đổi cuộc chơi tầm bắn 300km",
+    "content": "Ukraine đã cạn kiệt tên lửa ATACMS tầm bắn 300km, loại vũ khí mà nước này kỳ vọng sẽ thay đổi cục diện chiến sự với Nga. Thông tin này được xác nhận bởi các quan chức Mỹ và Ukraine, cho biết rằng Ukraine đã sử dụng hết số tên lửa này vào tháng 1. Việc cạn kiệt vũ khí diễn ra vào thời điểm Mỹ nối lại viện trợ quân sự cho Kiev sau các cuộc đàm phán gần đây.",
+    "link": "https://dantri.com.vn/the-gioi/ukraine-can-kiet-vu-khi-thay-doi-cuoc-choi-tam-ban-300km-20250313123154611.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại sao Ukraine cạn kiệt tên lửa ATACMS tầm bắn 300km?",
+    "answers": [
+      {
+        "text": "Vì đã sử dụng hết số tên lửa ATACMS được viện trợ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ nguồn lực để sản xuất thêm.",
+        "correct": false
+      },
+      {
+        "text": "Vì tên lửa bị hỏng trong quá trình sử dụng.",
+        "correct": false
+      },
+      {
+        "text": "Vì Nga đã chặn mọi nguồn cung cấp vũ khí.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhà thơ, nhạc sĩ Nguyễn Thụy Kha qua đời",
+    "content": "Nhà thơ, nhạc sĩ Nguyễn Thụy Kha đã qua đời vào hồi 10h45 ngày 13/3 tại Hà Nội, sau thời gian chống chọi với căn bệnh ung thư đại tràng. Ông sinh năm 1949 tại Hải Phòng và là hội viên Hội Nhà văn Việt Nam từ năm 1990. Nguyễn Thụy Kha là tác giả của nhiều tác phẩm nổi tiếng về âm nhạc và văn chương, cũng như có nhiều bài thơ được phổ nhạc.",
+    "link": "https://dantri.com.vn/giai-tri/nha-tho-nhac-si-nguyen-thuy-kha-qua-doi-20250313134208549.htm",
+    "cat": "giai-tri",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Nguyễn Thụy Kha đã qua đời vào thời gian nào?",
+    "answers": [
+      {
+        "text": "10h45 ngày 13/3",
+        "correct": true
+      },
+      {
+        "text": "8h00 ngày 12/3",
+        "correct": false
+      },
+      {
+        "text": "15h30 ngày 14/3",
+        "correct": false
+      },
+      {
+        "text": "9h00 ngày 13/3",
+        "correct": false
+      },
+      {
+        "text": "12h45 ngày 14/3",
         "correct": false
       }
     ]
@@ -1943,33 +2028,6 @@
     ]
   },
   {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -1996,6 +2054,33 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -2167,33 +2252,6 @@
     ]
   },
   {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -2220,6 +2278,33 @@
       },
       {
         "text": "150 ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -2422,6 +2507,33 @@
     ]
   },
   {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -2448,33 +2560,6 @@
       },
       {
         "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -3886,33 +3971,6 @@
     ]
   },
   {
-    "title": "Rau củ quả nào tốt cho não?",
-    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
-    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
-    "answers": [
-      {
-        "text": "Có, rau củ quả rất tốt cho não trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
-        "correct": false
-      },
-      {
-        "text": "Rau củ quả không có tác dụng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ một số loại rau củ mới tốt cho não.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
     "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
     "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
@@ -3935,6 +3993,33 @@
       },
       {
         "text": "Bông cải xanh, khoai lang, hành tây",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Rau củ quả nào tốt cho não?",
+    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
+    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
+    "answers": [
+      {
+        "text": "Có, rau củ quả rất tốt cho não trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
+        "correct": false
+      },
+      {
+        "text": "Rau củ quả không có tác dụng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ một số loại rau củ mới tốt cho não.",
         "correct": false
       }
     ]
@@ -4728,60 +4813,6 @@
       },
       {
         "text": "Chỉ cần đổi thẻ căn cước.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Federer thắng nhiều nhất 'Big 3' sau tuổi 35",
-    "content": "Roger Federer đã giành chiến thắng nhiều nhất trong số 'Big 3' sau khi bước sang tuổi 35, với tỷ lệ thắng 84% trong 229 trận và giành được 15 danh hiệu, bao gồm ba Grand Slam. Trong khi đó, Rafael Nadal chỉ tham gia 100 trận với 76 chiến thắng và sáu danh hiệu, và Novak Djokovic, dù vẫn thi đấu, nhưng phong độ của anh đang đi xuống với nhiều thất bại gần đây. Federer là tay vợt duy nhất trong nhóm có thành tích ấn tượng sau tuổi 35, khẳng định sức mạnh của mình cho đến khi giải nghệ vào năm 2022.",
-    "link": "https://vnexpress.net/federer-thang-nhieu-nhat-big-3-sau-tuoi-35-4860211.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Federer đã giành bao nhiêu danh hiệu sau tuổi 35?",
-    "answers": [
-      {
-        "text": "15 danh hiệu",
-        "correct": true
-      },
-      {
-        "text": "10 danh hiệu",
-        "correct": false
-      },
-      {
-        "text": "20 danh hiệu",
-        "correct": false
-      },
-      {
-        "text": "12 danh hiệu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "'Hái ra tiền' bằng nghề bế phụ nữ lên núi",
-    "content": "Tiểu Trương, một chàng trai 26 tuổi tại Trung Quốc, đã phát triển dịch vụ hỗ trợ leo núi, giúp bế hoặc cõng khách nữ lên đỉnh núi, từ đó kiếm được 50.000 tệ mỗi tháng. Dịch vụ này thu hút nhiều khách hàng nữ, đặc biệt là những người từ 25-40 tuổi, nhờ vào sự hỗ trợ cả về thể lực và tâm lý. Tiểu Trương đã mở rộng đội ngũ của mình lên đến 50 người và có kế hoạch phát triển dịch vụ sang các ngọn núi nổi tiếng khác. Mặc dù công việc này mang lại thu nhập cao, cũng có lo ngại về sức khỏe lâu dài của anh.",
-    "link": "https://vnexpress.net/hai-ra-tien-bang-nghe-be-phu-nu-len-nui-4860124.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tiểu Trương kiếm tiền bằng cách nào?",
-    "answers": [
-      {
-        "text": "Hỗ trợ leo núi bằng cách bế phụ nữ lên đỉnh núi",
-        "correct": true
-      },
-      {
-        "text": "Bán gậy leo núi",
-        "correct": false
-      },
-      {
-        "text": "Làm hướng dẫn viên du lịch",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức tour leo núi",
         "correct": false
       }
     ]
